fixed include and changed it to dynamic include_tasks

--- a/roles/operations/tasks/main.yml
+++ b/roles/operations/tasks/main.yml
@@ -2,36 +2,36 @@
 ############
 #Add objects
 ############
-- include: bigip_node/add_node.yml 
+- include_tasks: bigip_node/add_node.yml 
   vars: 
     - host: "10.0.2.167" 
     - name: "member1" 
     - monitor: "/Common/icmp"
   when: state == "present"
 
-- include: bigip_pool/manage_pool.yml 
+- include_tasks: bigip_pool/manage_pool.yml 
   vars: 
     - name: "pool1"
     - monitor: "/Common/http_head_f5"
   when: state == "present"
 
-- include: bigip_pool_member/manage_members.yml 
+- include_tasks: bigip_pool_member/manage_members.yml 
   vars: 
     - host: "member1" 
     - pool: "pool1"
     - port: "8080"
   when: state == "present"
 
-- include: bigip_irule/manage_irule.yml
+- include_tasks: bigip_irule/manage_irule.yml
   when: state == "present"
 
-- include: bigip_monitor_tcp/manage_tcp_monitor.yml
+- include_tasks: bigip_monitor_tcp/manage_tcp_monitor.yml
   when: state == "present"
 
-- include: bigip_monitor_http/manage_http_monitor.yml
+- include_tasks: bigip_monitor_http/manage_http_monitor.yml
   when: state == "present"
 
-- include: bigip_virtual_server/manage_vip.yml 
+- include_tasks: bigip_virtual_server/manage_vip.yml 
   vars:
     - description: "foo-vip" 
     - destination: "10.0.2.183" 
@@ -43,16 +43,16 @@
     - all_rules: "Bodgeit_Rewrite"
   when: state == "present"
 
-- include: bigip_iapp_template/appsvcs.yml
+- include_tasks: bigip_iapp_template/appsvcs.yml
   when: state == "present"
 
-- include: bigip_iapp_service/appsvcs.yml
+- include_tasks: bigip_iapp_service/appsvcs.yml
   when: state == "present"
 
 ###############
 #Remove objects
 ###############
-- include: bigip_virtual_server/manage_vip.yml
+- include_tasks: bigip_virtual_server/manage_vip.yml
   vars:
     - description: "foo-vip" 
     - destination: "10.0.2.183" 
@@ -64,30 +64,30 @@
     - all_rules: "Bodgeit_Rewrite"
   when: state == "absent"
 
-- include: bigip_irule/manage_irule.yml
+- include_tasks: bigip_irule/manage_irule.yml
   when: state == "absent"
 
-- include: bigip_monitor_tcp/manage_tcp_monitor.yml
+- include_tasks: bigip_monitor_tcp/manage_tcp_monitor.yml
   when: state == "absent"
 
-- include: bigip_monitor_http/manage_http_monitor.yml
+- include_tasks: bigip_monitor_http/manage_http_monitor.yml
   when: state == "absent"
 
-- include: bigip_pool/manage_pool.yml 
+- include_tasks: bigip_pool/manage_pool.yml 
   vars: 
     - name: "pool1" 
     - monitor: "/Common/http_head_f5"
   when: state == "absent"
 
-- include: bigip_node/remove_node.yml 
+- include_tasks: bigip_node/remove_node.yml 
   vars:
     - name: "member1" 
     - monitor: "/Common/icmp"
   when: state == "absent"
 
-- include: bigip_iapp_service/appsvcs.yml
+- include_tasks: bigip_iapp_service/appsvcs.yml
   when: state == "absent"
 
-- include: bigip_iapp_template/appsvcs.yml
+- include_tasks: bigip_iapp_template/appsvcs.yml
   when: state == "absent"
 ...
