--- a/roles/onboarding/tasks/main.yml
+++ b/roles/onboarding/tasks/main.yml
@@ -1,15 +1,15 @@
 ---
-- include: bigip_license/license.yml 
+- include_tasks: bigip_license/license.yml 
   vars:
     - key: "TNCDO-GRKLJ-HVWUT-XCGTD-EFJJFNQ"
 
-- include: bigip_vlan/add_untagged_vlan.yml 
+- include_tasks: bigip_vlan/add_untagged_vlan.yml 
   vars:
     - name: "external" 
     - untagged_interface: "1.1"
 
 ## bug - https://github.com/mcgonagle/ansible_f5/issues/17
-- include: bigip_selfip/add_selfip.yml 
+- include_tasks: bigip_selfip/add_selfip.yml 
   vars:
     - name: "10.0.1.10" 
     - address: "10.0.1.10" 
@@ -18,13 +18,13 @@
     - route_domain: "0" 
     - traffic_group: "traffic-group-local-only"
 
-- include: bigip_vlan/add_untagged_vlan.yml 
+- include_tasks: bigip_vlan/add_untagged_vlan.yml 
   vars: 
     - name: "internal" 
     - untagged_interface: "1.2"
 
 ## bug - https://github.com/mcgonagle/ansible_f5/issues/17
-- include: bigip_selfip/add_selfip.yml 
+- include_tasks: bigip_selfip/add_selfip.yml 
   vars:
     - name: "10.0.2.10" 
     - address: "10.0.2.10" 
@@ -33,27 +33,27 @@
     - route_domain: "0" 
     - traffic_group: "traffic-group-local-only"
 
-- include: bigip_device_ntp/set_ntp_server.yml 
+- include_tasks: bigip_device_ntp/set_ntp_server.yml 
   vars: 
     - ntp_server1: "time.apple.com" 
     - ntp_server2: "time.nist.gov"
 
-- include: bigip_device_ntp/set_timezone.yml 
+- include_tasks: bigip_device_ntp/set_timezone.yml 
   vars:
     - timezone: "America/New_York"
 
 ##bug - https://github.com/mcgonagle/ansible_f5/issues/22
-##- include: bigip_hostname/set_hostname.yml hostname="bigip.localhost.localdomain"
+##- include_tasks: bigip_hostname/set_hostname.yml hostname="bigip.localhost.localdomain"
 
 ## Issue dhcp needs to be disabled - https://github.com/mcgonagle/ansible_f5/issues/10
-##- include: bigip_device_dns/set_dns.yml name_server1="8.8.8.8" name_server2="8.8.4.4" search_domain1="localdomain" search_domain2="lab.local" 
+##- include_tasks: bigip_device_dns/set_dns.yml name_server1="8.8.8.8" name_server2="8.8.4.4" search_domain1="localdomain" search_domain2="lab.local" 
 
 ##bug -https://github.com/mcgonagle/ansible_f5/issues/11
-- include: bigip_remote_syslog/set_syslog_server.yml 
+- include_tasks: bigip_remote_syslog/set_syslog_server.yml 
   vars:
     - remote_host: "10.10.10.10" 
 
-- include: bigip_user/add_user.yml 
+- include_tasks: bigip_user/add_user.yml 
   vars:
     - username_credential: "tom" 
     - password_credential: "password" 
@@ -61,7 +61,7 @@
     - partition_access: "all:admin" 
     - update_password: "on_create"
 
-- include: bigip_user/add_user.yml 
+- include_tasks: bigip_user/add_user.yml 
   vars: 
     - username_credential: "bob" 
     - password_credential: "password" 
@@ -69,12 +69,12 @@
     - partition_access: "all:admin" 
     - update_password: "on_create"
 
-- include: bigip_ssl_certificate/import_certificate.yml
+- include_tasks: bigip_ssl_certificate/import_certificate.yml
 
 ##bug - https://github.com/mcgonagle/ansible_f5/issues/23
-##- include: bigip_partition/add_partition.yml name="foo"
+##- include_tasks: bigip_partition/add_partition.yml name="foo"
 
 ##bug - https://github.com/mcgonagle/ansible_f5/issues/21
-##- include: bigip_snmp_trap/add_trap.yml name="trap" community="community" destination="trap.localdomain" snmp_version="2c"
-#- include: bigip_provision/provision_module.yml module="asm" level="nominal"
+##- include_tasks: bigip_snmp_trap/add_trap.yml name="trap" community="community" destination="trap.localdomain" snmp_version="2c"
+#- include_tasks: bigip_provision/provision_module.yml module="asm" level="nominal"
 ...
