--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,4 +3,4 @@ inventory = ./hosts
 roles_path = ./roles
 ##library = ./library
 retry_files_enabled = False
-vault_password_file = group_vars/all/vault.yml
+#vault_password_file = group_vars/all/vault.yml
