--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
-inventory = ./hosts
+#inventory = ./hosts
 roles_path = ./roles
 ##library = ./library
 retry_files_enabled = False
 #vault_password_file = group_vars/all/vault.yml
+ask_vault_pass = True
