--- a/playbooks/onboarding.yml
+++ b/playbooks/onboarding.yml
@@ -1,6 +1,8 @@
 ---
   - hosts: all
     gather_facts: False
+    vars_files:
+      - "../group_vars/all/vault"
     roles:
-      - onboarding 
+      - onboarding
 ...
