--- a/roles/onboarding/tasks/bigip_vlan/add_untagged_vlan.yml
+++ b/roles/onboarding/tasks/bigip_vlan/add_untagged_vlan.yml
@@ -6,7 +6,7 @@
     server: "{{ inventory_hostname }}"
     name: "{{ item.name }}"
     untagged_interface: "{{ item.untagged_interface |default(omit) }}" 
-    state: "present"
+    state: "{{ state }}"
     validate_certs: "no"
   delegate_to: localhost
   with_items: "{{ vlans }}"
