--- a/roles/onboarding/tasks/bigip_device_ntp/set_ntp_server.yml
+++ b/roles/onboarding/tasks/bigip_device_ntp/set_ntp_server.yml
@@ -4,9 +4,9 @@
     user: "{{ username }}"
     password: "{{ password }}"
     server: "{{ inventory_hostname }}"
-    ntp_servers:
-        - "{{ ntp_server1 }}" 
-        - "{{ ntp_server2 }}" 
+    ntp_servers: "{{ item.ntp_server }}"
+    state: "{{ state }}"
     validate_certs: "no"
   delegate_to: localhost
+  with_items: "{{ ntp_servers }}"
 ...
