--- a/roles/onboarding/tasks/main.yml
+++ b/roles/onboarding/tasks/main.yml
@@ -14,4 +14,13 @@
       - { name: "vlan_1_12", untagged_interface: "1.12" }
       - { name: "vlan_1_13", untagged_interface: "1.13" }
   tags: vlan
+
+- include_tasks: bigip_device_ntp/set_ntp_server.yml 
+  vars: 
+    ntp_servers:
+      - { ntp_server: "0.pool.ntp.org" }
+      - { ntp_server: "1.pool.ntp.org" }
+      - { ntp_server: "2.pool.ntp.org" }
+      - { ntp_server: "3.pool.ntp.org" }
+  tags: ntp
 ...
