--- a/roles/onboarding/tasks/bigip_device_ntp/set_ntp_server.yml
+++ b/roles/onboarding/tasks/bigip_device_ntp/set_ntp_server.yml
@@ -4,9 +4,12 @@
     user: "{{ username }}"
     password: "{{ password }}"
     server: "{{ inventory_hostname }}"
-    ntp_servers: "{{ item.ntp_server }}"
+    ntp_servers:
+      - "0.pool.ntp.org"
+      - "1.pool.ntp.org"
+      - "2.pool.ntp.org"
+      - "3.pool.ntp.org"
     state: "{{ state }}"
     validate_certs: "no"
   delegate_to: localhost
-  with_items: "{{ ntp_servers }}"
 ...
